--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>.Songs</title>
+    <title>.songs</title>
+    <link href="https://fonts.googleapis.com/css?family=Forum|Jura" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/style.css">
 
@@ -16,7 +17,7 @@
         <div id='header-row' class="row header-row header-row-background-default text-center">
             <div class="col-xs-offset-1 col-xs-10">
                 <div class="header-wrapper">
-                    <h1 class="main-title">.Songs</h1>
+                    <h1 class="main-title">.songs</h1>
                     <form class="form-inline" onsubmit="app.controllers.itunesCtrl.getMusic(event)">
                         <!--DO NOT MODIFY THE ID OR ONCLICK ATTRIBUTES IN THIS FORM-->
                         <div class="form-group">
