--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div id='header-row' class="row header-row header-row-background-default text-center">
-            <div class="col-xs-offset-1 col-xs-10">
+            <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
                 <div class="header-wrapper">
                     <h1 class="main-title">.songs</h1>
                     <form class="form-inline" onsubmit="app.controllers.itunesCtrl.getMusic(event)">
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div id='songs-row' class="row songs-row songs-row-background-default">
-            <div class="col-xs-offset-1 col-xs-10">
+            <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
                 <div id="songs" class="row">
                 </div>
             </div>
